# cjkfmt

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY_RESOLUTION.md  japanese.md  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
cjkfmt-cli/: Cargo.toml
cjkfmt-cli/src/: _log.rs  check.rs  config.rs  document.rs  format.rs  line_break.rs  main.rs  spacing.rs  spacing_checker.rs
cjkfmt-cli/src/cli/: check.rs  format.rs  mod.rs  utils.rs
cjkfmt-cli/src/core/: diagnostic.rs  lines_inclusive.rs
cjkfmt-cli/test_cases/check/: line-end-prohibition-001.json  line-end-prohibition-003.json  line-start-prohibition-001.json  line-start-prohibition-003.json  spacing-003.json
cjkfmt-cli/test_cases/format/: line-end-prohibition-001.json  line-end-prohibition-004.json  multiple-wrap-points-in-a-line.json
cjkfmt-core/: Cargo.toml
cjkfmt-core/src/: diagnostic.rs  lib.rs  lines_inclusive.rs  position.rs
cjkfmt-parser/: Cargo.toml  build.rs
cjkfmt-parser/src/: errors.rs  ffi.rs  grammar.rs  lib.rs  node_visitor.rs  parse.rs
issues/: 1
sample_files/: README.md  japanese--max-width=80.md  japanese.md
src/: _log.rs  args.rs  check.rs  config.rs  diagnostic.rs  format.rs  line_break.rs  main.rs  position.rs  spacing.rs
src/cli/: args.rs  check.rs  format.rs  mod.rs
src/core/: diagnostic.rs  lines_inclusive.rs  mod.rs
test_cases/check/: line-end-prohibition-001.json  line-end-prohibition-002.json  line-end-prohibition-003.json  line-end-prohibition-004.json  line-start-prohibition-001.json  line-start-prohibition-002.json  line-start-prohibition-003.json  spacing-001.json  spacing-002.json  spacing-003.json  spacing-004.json  spacing-005.json
test_cases/format/: ambiguous-width-narrow.json  ambiguous-width-wide.json  line-end-prohibition-002.json  line-end-prohibition-003.json
