[package]
name = "cjkfmt"
version = "0.0.1"
edition = "2024"
authors = ["Suguru Yamamoto <sgryjp@gmail.com>"]
description = "Formatter for CJK text files"
repository = "https://github.com/sgryjp/cjkfmt"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["cargo", "derive", "wrap_help"] }
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.0", features = ["cjk"] }
yansi = { version = "1.0.1", features = ["detect-tty"] }

[dev-dependencies]
rstest = "0.25.0"
