[package]
name = "cjkfmt"
version = "0.0.3"
edition = "2024"
authors = ["Suguru Yamamoto <sgryjp@gmail.com>"]
description = "Formatter for CJK text files"
repository = "https://github.com/sgryjp/cjkfmt"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.40", features = ["cargo", "derive", "wrap_help"] }
serde = { version = "1.0.219", features = ["derive"] }
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.1", features = ["cjk"] }
yansi = { version = "1.0.1", features = ["detect-tty"] }

[dev-dependencies]
rstest = "0.25.0"
serde_json = "1.0.140"
test-generator = "0.3.1"
