[package]
name = "cjkfmt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cjkfmt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
cjkfmt-core = { path = "../cjkfmt-core" }
clap = { version = "4.5.50", features = ["cargo", "derive", "wrap_help"] }
figment = { version = "0.10.19", features = ["env", "json"] }
home = "0.5.12"
serde.workspace = true
unicode-general-category = "1.1.0"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.2", features = ["cjk"] }
yansi = { version = "1.0.1", features = ["detect-env", "detect-tty"] }

[dev-dependencies]
regex = "1.11.3"
rstest.workspace = true
serde_json = "1.0.145"
test-generator = "0.3.1"
